# cppframework

./: CMakeLists.txt  README.md
App/: CMakeLists.txt
App/include/: server.h  starter_example.h
App/src/: main.cpp  server.cpp  starter_example.cpp
App2/: CMakeLists.txt
App2/include/: starter_example2.h
App2/src/: main.cpp  starter_example2.cpp
CppCommon/: CMakeLists.txt  build
CppCommon/include/system/: source_location.inl  stack_trace.inl
CppCommon/modules/CppBenchmark/: build  cmake
CppCommon/modules/CppBenchmark/modules/: Catch2
CppServer/: CMakeLists.txt
CppServer/include/server/asio/: ssl_client.h  ssl_server.h  tcp_server.h  udp_client.h
CppServer/include/server/http/: http_request.inl  http_response.inl
CppServer/modules/: CMakeLists.txt
CppServer/modules/CppBenchmark/: CMakeLists.txt  cmake
CppServer/modules/CppBenchmark/modules/: cpp-optparse
CppServer/modules/CppCommon/: CMakeLists.txt
CppServer/modules/CppCommon/modules/: Catch2  CppBenchmark
CppServer/source/server/asio/: ssl_session.cpp  tcp_session.cpp
CppServer/www/api/: swagger
IfRuntime/: CMakeLists.txt
IfRuntime/include/: IfRuntime.h
IfRuntime/src/: IfRuntime.cpp
Logging/spdlog/include/spdlog/: tweakme.h
Logging/spdlog/src/: async.cpp
NetworkIf/: CMakeLists.txt
NetworkIf/HTTPSERVER/: CMakeLists.txt
NetworkIf/HTTPSERVER/include/: HTTPServerAdapter.h
NetworkIf/HTTPSERVER/src/: HTTPServerAdapter.cpp
NetworkIf/TCP/: CMakeLists.txt
NetworkIf/TCP/include/: TCPAdapter.h
NetworkIf/TCP/src/: TCPAdapter.cpp
NetworkIf/TCPSERVER/: CMakeLists.txt
NetworkIf/TCPSERVER/include/: TCPServerAdapter.h
NetworkIf/TCPSERVER/src/: TCPServerAdapter.cpp
NetworkIf/TLS/: CMakeLists.txt
NetworkIf/TLS/include/: TLSAdapter.h
NetworkIf/TLS/src/: TLSAdapter.cpp
NetworkIf/TLSSERVER/: CMakeLists.txt
NetworkIf/TLSSERVER/include/: TLSServerAdapter.h
NetworkIf/TLSSERVER/src/: TLSServerAdapter.cpp
NetworkIf/UDP/: CMakeLists.txt
NetworkIf/UDP/include/: EVCCUdpClient.h
NetworkIf/UDP/src/: EVCCUDPClient.cpp
Platform/: CMakeLists.txt  compiler.cmake  files.cmake
Platform/platform/core/: Application.cpp  SystemStatistics.cpp  Task.cpp
Platform/platform/core/ipc/: QueueNotifier.cpp
Platform/platform/core/timer/: ElapsedTime.cpp  Timer.cpp  TimerService.cpp
Platform/platform/include/platform/: config_constants.h
Platform/platform/include/platform/core/: Application.h  SystemStatistics.h  Task.h  task_priorities.h
Platform/platform/include/platform/core/fsm/: StaticFSM.h
Platform/platform/include/platform/core/ipc/: IEventListener.h  ILinkSubscriber.h  ITaskEventQueue.h  Link.h  Publisher.h  Queue.h  QueueNotifier.h  SubscribingTaskEventQueue.h  TaskEventQueue.h
Platform/platform/include/platform/core/timer/: ElapsedTime.h  ITimer.h  Timer.h  TimerExpiredEvent.h  TimerService.h
Platform/platform/include/platform/core/util/: create_protected.h
SQLiteCpp_Example/: CMakeLists.txt
SQLiteCpp_Example/include/: person.pb.cc  person.pb.h
SQLiteCpp_Example/src/: main.cpp  pbsqlite_test.cpp
cmake/: SetCompilerFeatures.cmake
integration_test/: CMakeLists.txt  RemoteTest.cpp  RemoteTest.h  app_files.cmake  stress_test.cpp
integration_test/app/: .gitignore  app_files.cmake  compiler.cmake
integration_test/app/conf/: mp_authen_list.json  remote_basic_conf_30k.json  remote_basic_conf_60k.json
integration_test/app/include/: AppItemData.h  CsmIf.h  NvmIf.h  OcppItemData.h
integration_test/app/src/: CsmIf.cpp  NvmIf.cpp
integration_test/stub/: IOpModeManager.cpp  OpModeManagerImpl.cpp  broker.c  cancom.c  ocpp_client.c
integration_test/stub/include/: IOpModeManager.h  IOpModeReceiver.h  OpModeManagerImpl.h  OpModeManagerInternalTypes.h  OpModeManagerTypes.h  cancomm_if.h  cancomm_types.h  config_manager_if.hpp  libbroker.h  libbroker_messages.h  libbroker_topics.h  ocpp_if.h  ocpp_types.h  ocpp_types_internal.h  ss_helper.h
integration_test/stub/include/appfw/cereal/: README.md  cereal_ext.hpp  no_pretty_json.hpp  schema_array.hpp  schema_date_time.hpp  schema_enum.hpp  schema_string.hpp
integration_test/stub/include/appfw/cereal/test/: compile.cpp  test_schema_array.cpp
integration_test/stub/include/appfw/protocol/: certificate_signed_request.hpp  data_transfer_request.hpp  data_transfer_response.hpp  get15118_ev_certificate_request.hpp  notify_central_charging_needs_request.hpp  notify_central_charging_needs_response.hpp  publish_firmware_status_notification_request.hpp  renegotiate15118_schedule_request.hpp  renegotiate15118_schedule_response.hpp  update15118_ev_certificate_request.hpp  update15118_ev_certificate_response.hpp
integration_test/stub/include/appfw/time/: README.md  build.sh  rfc3339.hpp  time.hpp  time_point.hpp
integration_test/stub/include/appfw/time/exe/: rfc3339.cpp
integration_test/stub/include/appfw/time/test/: test_rfc3339.cpp
jsoncpp/: cmake_install.cmake
jsoncpp/include/: cmake_install.cmake
jsoncpp/src/: cmake_install.cmake
jsoncpp/src/lib_json/: cmake_install.cmake
